# script-reader

./: .gitignore  pyproject.toml
.streamlit/: config.toml
src/: Home.py
