[project]
name = "script-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "complexipy>=4.2.0",
    "langgraph>=1.0.5",
    "streamlit>=1.52.2",
]

[dependency-groups]
dev = [
    "commitizen>=4.11.0",
    "complexipy>5",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.10",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
